@@ -87,6 +87,15 @@
                             </jvmArgs>
                         </launcher>
                         <launcher>
+                            <id>CreateFreebaseLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateFreebaseLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
                             <id>ProcessInterLanguageLinks</id>
                             <mainClass>org.dbpedia.extraction.scripts.ProcessInterLanguageLinks</mainClass>
                             <jvmArgs>
@@ -197,6 +206,30 @@
                         <launcher>
                             <id>UnmodifiedFeederCacheGenerator</id>
                             <mainClass>org.dbpedia.extraction.scripts.UnmodifiedFeederCacheGenerator</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>RemoveRemainingTags</id>
+                            <mainClass>org.dbpedia.extraction.scripts.RemoveRemainingTags</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>WikidataSameAsToLanguageLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.WikidataSameAsToLanguageLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>GenerateListOfExistingAbstracts</id>
+                            <mainClass>org.dbpedia.extraction.scripts.GenerateListOfExistingAbstracts</mainClass>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
